fix text alignment in paragraphs

--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -14,7 +14,6 @@ h1 {
 
 .title {
   background-image: url("../images/apple-pie.jpg");
-  background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   height: 700px;
@@ -32,7 +31,11 @@ section {
   align-items: center;
 }
 
-.divider {
+.paragraph-container {
+  width: 100%;
+}
+
+1.divider {
   border-top: 2px solid rgb(128,128,128);
 }
 
